# CG

./: Untitled.mtl
Atmosphere/src/DX12App/: DX12App.cpp  DX12App.vcxproj  DX12App.vcxproj.filters  FrameResource.h
Marching cubes/src/Common/: Camera.cpp  Camera.h  GeometryGenerator.cpp  GeometryGenerator.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
Marching cubes/src/Models/: Guard.mtl  maxwell.mtl
Marching cubes/src/Textures/: DecalDiff.dds  DecalDisp.dds  DecalNorm.dds  rock_diff.dds  terrain_diff.dds  terrain_disp.dds  terrain_norm.dds
RT/src/Common/: d3dApp.h  d3dUtil.h
RT/src/DX12App/: DX12App.cpp  DX12App.vcxproj  DX12App.vcxproj.filters  Gbuffer.cpp  Gbuffer.h
RT/src/libs/Dxil/: CMakeLists.txt
TAA/Chapter 9 Texturing/TexColumns/: EdgeDetectionSettings.h  FrameResource.cpp  FrameResource.h  GBuffer.cpp  GBuffer.h  HistoryBuffer.cpp  HistoryBuffer.h  RenderingSystem.cpp  RenderingSystem.h  TexColumns.vcxproj  TexColumns.vcxproj.filters  TexColumnsApp.cpp
TAA/Common/: Camera.h  DDSTextureLoader.cpp  GeometryGenerator.h  MathHelper.cpp  MathHelper.h  d3dApp.cpp  d3dApp.h  d3dUtil.cpp  d3dUtil.h
TAA/Textures/textures/: Cloth_Texture.dds  Foot_Texture.dds  Hat_Texture.dds  Head_Texture.dds  diablo3_pose_diffuse.dds  diablo3_pose_glow.dds  diablo3_pose_nm.dds  diablo3_pose_nm_tangent.dds  diablo3_pose_spec.dds  terrain_diffuse.dds  terrain_diffuse_lod1.dds  terrain_diffuse_lod2.dds  terrain_hm_lod1.dds  terrain_hm_lod2.dds  terrain_nm_lod1.dds  terrain_nm_lod2.dds  terrain_roughness.dds
Terrain/src/Common/: Camera.cpp  (+4 more)
source/: i_dont_know.glb
(+67 files in other folders)
